src/program-test-242-1/src/src-output/student3/output-student3.txt
.\.\src\src-output\student3\ArraySearcher.java:8: error: ']' expected
		int a[0] = Integer.parseInt(args[3]);
		      ^
.\.\src\src-output\student3\ArraySearcher.java:8: error: illegal start of expression
		int a[0] = Integer.parseInt(args[3]);
		       ^
.\.\src\src-output\student3\ArraySearcher.java:9: error: ']' expected
		int a[1] = Integer.parseInt(args[4]);
		      ^
.\.\src\src-output\student3\ArraySearcher.java:9: error: illegal start of expression
		int a[1] = Integer.parseInt(args[4]);
		       ^
.\.\src\src-output\student3\ArraySearcher.java:10: error: ']' expected
		int a[2] = Integer.parseInt(args[5]);
		      ^
.\.\src\src-output\student3\ArraySearcher.java:10: error: illegal start of expression
		int a[2] = Integer.parseInt(args[5]);
		       ^
.\.\src\src-output\student3\ArraySearcher.java:11: error: ']' expected
		int a[3] = Integer.parseInt(args[6]);
		      ^
.\.\src\src-output\student3\ArraySearcher.java:11: error: illegal start of expression
		int a[3] = Integer.parseInt(args[6]);
		       ^
8 errors
.\.\src\src-output\student3\TestProgram.java:6: error: cannot find symbol
		ArraySearcher program = new ArraySearcher();
		^
  symbol:   class ArraySearcher
  location: class TestProgram
.\.\src\src-output\student3\TestProgram.java:6: error: cannot find symbol
		ArraySearcher program = new ArraySearcher();
		                            ^
  symbol:   class ArraySearcher
  location: class TestProgram
.\.\src\src-output\student3\TestProgram.java:17: error: cannot find symbol
		ArraySearcher program = new ArraySearcher();
		^
  symbol:   class ArraySearcher
  location: class TestProgram
.\.\src\src-output\student3\TestProgram.java:17: error: cannot find symbol
		ArraySearcher program = new ArraySearcher();
		                            ^
  symbol:   class ArraySearcher
  location: class TestProgram
4 errors
Usage: java [-options] class [args...]
           (to execute a class)
   or  java [-options] -jar jarfile [args...]
           (to execute a jar file)
where options include:
    -d32	  use a 32-bit data model if available
    -d64	  use a 64-bit data model if available
    -client	  to select the "client" VM
    -server	  to select the "server" VM
    -hotspot	  is a synonym for the "client" VM  [deprecated]
                  The default VM is client.

    -cp <class search path of directories and zip/jar files>
    -classpath <class search path of directories and zip/jar files>
                  A ; separated list of directories, JAR archives,
                  and ZIP archives to search for class files.
    -D<name>=<value>
                  set a system property
    -verbose:[class|gc|jni]
                  enable verbose output
    -version      print product version and exit
    -version:<value>
                  require the specified version to run
    -showversion  print product version and continue
    -jre-restrict-search | -no-jre-restrict-search
                  include/exclude user private JREs in the version search
    -? -help      print this help message
    -X            print help on non-standard options
    -ea[:<packagename>...|:<classname>]
    -enableassertions[:<packagename>...|:<classname>]
                  enable assertions with specified granularity
    -da[:<packagename>...|:<classname>]
    -disableassertions[:<packagename>...|:<classname>]
                  disable assertions with specified granularity
    -esa | -enablesystemassertions
                  enable system assertions
    -dsa | -disablesystemassertions
                  disable system assertions
    -agentlib:<libname>[=<options>]
                  load native agent library <libname>, e.g. -agentlib:hprof
                  see also, -agentlib:jdwp=help and -agentlib:hprof=help
    -agentpath:<pathname>[=<options>]
                  load native agent library by full pathname
    -javaagent:<jarpath>[=<options>]
                  load Java programming language agent, see java.lang.instrument
    -splash:<imagepath>
                  show splash screen with specified image
See http://www.oracle.com/technetwork/java/javase/documentation/index.html for more details.
